# heimdall-rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  RELEASE_NOTES.md  gjallarhorn.desktop  run_privileged.sh
src/: lib.rs  main.rs  monitor.rs  settings.rs  utils.rs  worker.rs
ui/: appwindow.slint  components.slint  dialogs.slint  information_view.slint  structs.slint  usage_view.slint
