[package]
name = "gjallarhorn"
version = "0.2.0"
authors = ["Arunkumar Mourougappane <amouroug@buffalo.edu>"]
edition = "2021"
description = "Gjallarhorn - A modern, cross-platform system resource monitor written in Rust and Slint."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/arunkumar-mourougappane/gjallarhorn-rs"
documentation = "https://docs.rs/gjallarhorn"
repository = "https://github.com/arunkumar-mourougappane/gjallarhorn-rs"
keywords = ["system", "monitor", "gui", "slint", "utility"]
exclude = [
    ".github/*",
    "target/*",
    "*.png",
    "*.gif"
]

[lib]
name = "gjallarhorn"
path = "src/lib.rs"

[[bin]]
name = "gjallarhorn"
path = "src/main.rs"

[dependencies]
slint = "1.8.0"
sysinfo = "0.33.0"
nvml-wrapper = "0.9"
default-net = "0.22.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
directories = "6.0.0"
log = "0.4"
env_logger = "0.11"

[build-dependencies]
slint-build = "1.8.0"
